# pinyon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  a.cc  a.h  compare.hh  notes.txt  readme.md  surskit.hh  teambuilding.md  test.cc  test.py  todo.txt
benchmark/: battle-exp3.cc  battle-rand.cc  mold-state-exp3.cc  mold-state-matrix-ucb.cc  mold-state.cc  mold_state_exp3.cc  search.cc  tree-state-exp3.cc
docs/: readme.md
docs/references/: readme.md
docs/thoughts/: cache.md
examples/: dual-algorithm.hh  dual_algorithm.cc  dual_algorithm.hh  exp3p_solving_one_shot.cc  exp3p_solving_one_shot.hh  libtorch-actors.hh  libtorch_actors.hh  random-trees.cc  random_trees.cc  random_trees.hh
journal/: strong-types.cc  void-member.cc
limbo/model/: model.hh  monte_carlo.hh
limbo/search/: exp3.cc  exp3.hh  session.hh
limbo/state/: state.cc
limbo/state_on_stack/: state.cc  state.hh  toy_state.hh
limbo/tree/: node.cc  node.hh
pybind/: main.cpp  test.py
random-trees/: alphabeta.hh  grow-lib.hh  grow.hh  seed-state.hh  test.cc  tree-state.hh
random_trees/: alphabeta.hh  grow.hh  random_trees.cc  random_trees_one_file.hh  readme.md  seed-state.hh  seed_state.hh  tree-state.hh  tree_state.hh
rebuild limbo/model/: monte_carlo.hh
rebuild limbo/search/: exp3.cc  exp3.hh  session.hh
rebuild limbo/state/: state.hh
rebuild limbo/tree/: tree_linked_list.cc  tree_linked_list.hh
rewrite/: main.cc  state.hh  types.hh
src/: main.cc  main1.cc  main2.cc  pinyon.hh  rational.h  re.cc  readme.md  search.cc  surskit.hh  toy_states.cc  tree.cc  tree.h
src/algorithm/: algorithm.hh  arena.hh  exp3.hh  exp3p.hh  matrix-pucb.hh  matrix-ucb-simple.hh  matrix-ucb.hh  matrix_pucb.hh  matrix_ucb.hh  matrix_ucb_simple.hh  multithreaded.hh  readme.md  search.hh
src/algorithm/bandits/: algorithm.hh  bandit.hh  exp3.hh  exp3p.hh  matrix-pucb.hh  matrix-ucb-simple.hh  matrix-ucb.hh  multithreaded.hh
src/algorithm/solve/: alphabeta.hh  full-traversal.hh  grow.hh
src/algorithm/solver/: alpha-beta-dev.hh  alpha-beta-force.hh  alpha-beta-iter-full.hh  alpha-beta-iter.hh  alpha-beta-old.hh  alpha-beta-refactor.hh  alpha-beta.hh  full-traversal.hh  readme.md
src/algorithm/tree-bandit/: readme.md
src/algorithm/tree-bandit/bandit/: exp3-fat.hh  exp3-old.hh  exp3.hh  exp3mp.hh  matrix-ucb.hh  multithreaded.hh  off-policy.hh  rand.hh  tree-algorithm.hh  ucb.hh
src/algorithm/tree-bandit/tree/: bandit.hh  exp3.hh  mt.hh  multithreaded.hh  off-policy.hh  rand.hh  tfb-static.hh  tree-algorithm.hh  tree-bandit-flat.hh  tree-bandit.hh
src/dynamic/: basic.hh
src/libpinyon/: algorithm-generator.hh  dynamic-wrappers.hh  generator.hh  lrslib.hh  math.hh  mlp.hh  packs.hh  search-type.hh  template-prod.hh
src/libsurskit/: algorithm-generator.hh  dynamic-wrappers.hh  gambit.hh  generator.hh  getter.hh  gmp.hh  grow-lib.hh  lazy-eval.hh  lrslib.hh  math.cc  math.hh  packs.hh  random.hh  rational.hh  template-prod.hh  vector.hh
src/model/: libtorch-model.hh  libtorch_model.hh  model.hh  monte-carlo-model.hh  monte_carlo.hh  readme.md  search-model.hh  search_model.hh  solved-model.hh
src/search/: algorithm.hh  algorithm2.hh  e.hh  exp3.cc  exp3.hh  exp3p.hh  exp3p1.hh  exp3p2.hh  exp3p_thread.h  exp3p_thread.hh  exp3p_thread.txt  exp3p_thread1.hh  exp3p_thread2.hh  exp3p_thread_pool.hh  growing_tree.hh  matrix_ucb.hh  matrix_ucb2.hh  matrix_ucb_thread_pool.hh  multithreaded.hh  session.hh
src/search/multithreading/: exp3p_thread.hh  exp3p_thread_pool.hh  matrix_ucb_thread_pool.hh  readme.md
src/state/: arena.hh  mapped-state.hh  model-bandit.hh  random-tree-serialized.hh  random-tree.hh  readme.md  seed-state.hh  seed_state.hh  state.cc  state.hh  test-states.hh  test.cc  test_states.hh  toy_state.cc  toy_state.hh  toy_states.hh  traversed.hh
src/tree/: node.cc  node.hh  readme.md  stalk.hh  tree-debug.hh  tree-flat.hh  tree-leela.hh  tree-obs.hh  tree.hh  tree_linked_list.cc  tree_linked_list.hh  tree_obs.hh  tree_vector.cc
src/types/: actions.hh  arithmetic.hh  array.hh  concepts.hh  eee  eee.cc  matrix.hh  mutex.hh  random.hh  rational.hh  readme.md  replay.hh  strategy.hh  test.cc  types.hh  value.hh  vector.hh  wrapper.hh
src/wrapper/: basic.hh  readme.md
t2/: generate-data-serialized.cc
test/: del  del.cc  exp3p_thread_test.cc  expl_test.cc  expl_test.hh  expl_test_vector.cc  gambit_link_test.cc  misc.cc  mold_state_count.cc  mold_state_count.hh  mold_state_count_vector.cc  test.cc  thread_test.cc  unit_test.cc
tests/: alpha-beta-ratio.cc  arena.cc  ayy.cc  batch.cc  benchmark.cc  cart.cc  concepts.cc  concepts_2.cc  expl-test-vector.cc  expl-test.cc  expl_test.cc  find-segfault.cc  flat.cc  generate-data-serialized.cc  generate-data.cc  generate-data.hh  matrix-solve.cc  mold-state-count-vector.cc  mold-state-count.cc  mold_state_count.cc  mold_state_count_vector.cc  mpq.cc  mpz.cc  off-policy.cc  random-tree-expl.cc  rat.cc  search-model.cc  state-copy-test.cc  struct-sizes.cc  struct-sizes.hh  thread-test.cc  traversed.cc  tree-test.cc  wrapper.cc  www.cc
tests/cart/: eee.cc  node.cc  segfault.cc
tests/cpp/: a.cc  atomic.cc  convert.cc
tests/dynamic/: arena.cc  node-delete-2.cc  node-delete.cc  w.cc  www.cc
tests/gmp/: ff.cc  mpq.cc
tests/solved-state/: mem.cc  mem2.cc
tests/solving/: ab-float.cc  ab-iter.cc  ab-refactor.cc  ab.cc  alpha-beta-ratio.cc  fast.cc  random-tree-expl.cc
tests/t2/: find-segfault.cc  generate-data.cc  tree-test.cc
tests/torch/: mlp.cc  mlp2.cc
tests/tree/: node_count.cc
torch/: mlp.cc  mlp2.cc  net.hh  torch-test.cc  wrapper0.hh  wrapper1.hh
